# docs/swagger.yaml
@@ -114,6 +114,18 @@ definitions:
     required:
     - phone
     type: object
+  github_com_arfan21_project-sprint-social-media-api_internal_model.UserProfileUpdateRequest:
+    properties:
+      imageUrl:
+        type: string
+      name:
+        maxLength: 50
+        minLength: 5
+        type: string
+    required:
+    - imageUrl
+    - name
+    type: object
   github_com_arfan21_project-sprint-social-media-api_internal_model.UserRegisterRequest:
     properties:
       credentialType:
@@ -499,6 +511,53 @@ paths:
       summary: Create comment
       tags:
       - post
+  /v1/user:
+    patch:
+      consumes:
+      - application/json
+      description: Update Profile
+      parameters:
+      - description: With the bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Payload user update profile request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_arfan21_project-sprint-social-media-api_internal_model.UserProfileUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_arfan21_project-sprint-social-media-api_pkg_pkgutil.HTTPResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/github_com_arfan21_project-sprint-social-media-api_internal_model.UserResponse'
+              type: object
+        "400":
+          description: Error validation field
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_arfan21_project-sprint-social-media-api_pkg_pkgutil.HTTPResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/github_com_arfan21_project-sprint-social-media-api_pkg_pkgutil.ErrValidationResponse'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_arfan21_project-sprint-social-media-api_pkg_pkgutil.HTTPResponse'
+      summary: Update Profile
+      tags:
+      - user
   /v1/user/link/email:
     post:
       consumes:
